added youtube video to website

--- a/csce242/projects/part 7/index.html
+++ b/csce242/projects/part 7/index.html
@@ -29,6 +29,14 @@
     <section class="intro-section">
         <h1>Welcome to Video Game Character Hub</h1>
         <p>Explore the fascinating world of iconic video game characters, their stories, and abilities.</p>
+
+         <!-- Embed YouTube Video -->
+    <div class="video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fhJEYo4RixQ?si=rKKlG-ua-mL4ddnL" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen></iframe>
+        </iframe>
     </section>
 
     <!-- Featured Games Section -->
