updating for emails

--- a/csce242/projects/part 7/about.html
+++ b/csce242/projects/part 7/about.html
@@ -57,7 +57,7 @@
                 <h1>Contact Us</h1>
                 <p>If you have any questions or comments, feel free to reach out to us!</p>
         
-                <form action="/send" method="post">
+                <form method="post">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name"  autocomplete="name" required>
         
