--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -79,7 +79,16 @@
                     <p>Click below to view the assignment.</p>
                     <a href="part 7/index.html">View Website</a>
                 </div>
-            </div> 
+
+                <!-- Project 8 -->
+                  <!-- Remember that my Json works on my site i just cant see it in live testing -->
+                  <div class="project">
+                    <h3>Part 8 - React Site Components and Pages</h3>
+                    <img src="images/part 5 img.jpg" alt="Part 8 assignment">
+                    <p>Click below to view the assignment.</p>
+                    <a href="part 7/index.html">View Repo</a>
+                </div>
+            </div> <!-- Section cutoff -->
         </section>
     </main>
 
