--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -86,7 +86,8 @@
                     <h3>Part 8 - React Site Components and Pages</h3>
                     <img src="images/part 5 img.jpg" alt="Part 8 assignment">
                     <p>Click below to view the assignment.</p>
-                    <a href="part 7/index.html">View Repo</a>
+    <a href="https://github.com/your-username/project-react-site" target="_blank" rel="noopener noreferrer">View Repo</a>
+    <a href="https://your-username.github.io/project-react-site/" target="_blank" rel="noopener noreferrer">View Live Site</a>
                 </div>
             </div> <!-- Section cutoff -->
         </section>
