ready to deploy

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -87,7 +87,7 @@
                     <img src="images/part 5 img.jpg" alt="Part 8 assignment">
                     <p>Click below to view the assignment.</p>
     <a href="https://github.com/mauriceiono/project-react-site.git">View Repo</a>
-    <a href="https://mauriceiono.github.io/project-react-site/">View Live Site</a>
+    <a href="https://project-react-site.onrender.com/">View Live Site</a>
                 </div>
             </div> <!-- Section cutoff -->
         </section>
