--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -89,6 +89,18 @@
     <a href="https://github.com/mauriceiono/project-react-site.git">View Repo</a>
     <a href="https://project-react-site.onrender.com/">View Live Site</a>
                 </div>
+
+                 <!-- Project 9 -->
+                  <!-- Remember that my Json works on my site i just cant see it in live testing -->
+                  <div class="project">
+                    <h3>Part 9 - React Site More JavaScript</h3>
+                    <img src="images/part 5 img.jpg" alt="Part 8 assignment">
+                    <p>Click below to view the assignment.</p>
+    <a href="https://github.com/mauriceiono/project-react-site.git">View Repo</a>
+    <a href="https://project-react-site.onrender.com/">View Live Site</a>
+    <a href="https://project-react-site-server.onrender.com/">View  render server side</a>
+    <a href="https://github.com/mauriceiono/project-react-site-server.git">View server side repo</a>
+                </div>
             </div> <!-- Section cutoff -->
         </section>
     </main>
