addded stuff for part 10 post request

--- a/csce242/projects/index.html
+++ b/csce242/projects/index.html
@@ -93,7 +93,7 @@
                  <!-- Project 9 -->
                   <!-- Remember that my Json works on my site i just cant see it in live testing -->
                   <div class="project">
-                    <h3>Part 9 - React Site More JavaScript</h3>
+                    <h3>Part 9 - React Site More JavaScript & Post request</h3>
                     <img src="images/part 5 img.jpg" alt="Part 8 assignment">
                     <p>Click below to view the assignment.</p>
     <a href="https://github.com/mauriceiono/project-react-site.git">View Repo</a>
